--- a/frontend/assets/css/index.scss
+++ b/frontend/assets/css/index.scss
@@ -33,7 +33,7 @@ a {
     max-width: 100% !important;
 }
 
-// Product
+// Products
 .product-container {
     background-color: #e8eae6 !important;
     max-width: 1300px !important;
@@ -50,6 +50,20 @@ a {
 .product-container .v-data-table {
     background-color: #cdd0cb !important;
 }
+.products-card-subtitle {
+    margin-top: 1px !important;
+}
+.products-price {
+    font-size: 22px;
+}
+.products-availability {
+    font-size: 19px;
+}
+
+// Products Header 
+.products-header-card {
+    max-width: 1300px !important;
+}
 
 // Product page
 .product-page-title {
@@ -62,6 +76,20 @@ a {
 .product-page-indisponible {
     font-size: 25px;
     color: red;
+}
+.product-page-stock {
+    color: black;
+    font-size: 22px;
+}
+.snipcart-add-item {
+    background-color: #7c9473;
+    border-color: #7c9473 !important;
+}
+.snipcart-add-item:hover {
+    background-color: rgba(124, 148, 115, 0.7);
+}
+.spacer {
+    height: 30px;
 }
 
 // Footer
