--- a/frontend/assets/css/index.scss
+++ b/frontend/assets/css/index.scss
@@ -27,6 +27,9 @@ a {
 .v-window__next {
     z-index: 0 !important;
 }
+.v-skeleton-loader__image, .v-skeleton-loader__article {
+    z-index: 0;
+}
 
 // NavBar
 .nav-bar-container {
@@ -90,6 +93,9 @@ a {
 }
 .spacer {
     height: 30px;
+}
+.add-in-cart-button:hover {
+    background-color: rgba(124, 148, 115, 0.7);
 }
 
 // Footer
