fix paypal payment, add payment callback

--- a/frontend/assets/css/index.scss
+++ b/frontend/assets/css/index.scss
@@ -131,6 +131,12 @@ a {
     color: white !important;
 }
 
+// TransactionCompletedDialog
+.transaction-completed-dialog-text {
+    font-size: 19px !important;
+    font-weight: bold !important;
+}
+
 // Footer
 .footer {
     background-color: #7c9473 !important;
