add login, add register, add my account dialog

--- a/frontend/assets/css/index.scss
+++ b/frontend/assets/css/index.scss
@@ -12,6 +12,9 @@ a {
 .text-white {
     color: white;
 }
+.green-bg {
+    background-color: #7c9473;
+}
 .v-tabs-slider-wrapper {
     margin-left: 100px;
 }
@@ -113,7 +116,7 @@ a {
 
 // Cart
 .cart-title {
-    font-size: 35px !important;
+    font-size: 30px !important;
     color: white !important;
 }
 .cart-list-item-title {
