--- a/frontend/assets/css/index.scss
+++ b/frontend/assets/css/index.scss
@@ -44,6 +44,13 @@ a {
 .nav-bar-container {
     max-width: 100% !important;
 }
+.account-button {
+    background-color: transparent !important;
+    box-shadow: none !important;
+    height: 48px !important;
+    font-weight: bold !important;
+    font-size: 18px !important;
+}
 
 // Products
 .product-container {
