change mail provider, add forgot password

--- a/frontend/assets/css/index.scss
+++ b/frontend/assets/css/index.scss
@@ -181,6 +181,14 @@ a {
     color: black;
 }
 
+// ForgotPasswordDialog
+.forgot-password-title {
+    font-size: 27px;
+}
+.forgot-password-text {
+    font-size: 18px;
+}
+
 // Footer
 .footer {
     background-color: #7c9473 !important;
