--- a/frontend/assets/css/index.scss
+++ b/frontend/assets/css/index.scss
@@ -187,7 +187,23 @@ a {
     color: black;
 }
 
+// CGV
+.cgv-title {
+    font-size: 40px !important;
+}
+.cgv-subtitle {
+    font-size: 24px !important;
+}
+.cgv-article-title {
+    font-size: 20px !important;
+    font-weight: bold !important;
+}
+.cgv-article-text {
+    font-size: 17px !important;
+}
+
 // Footer
 .footer {
     background-color: #7c9473 !important;
+    width: 100%;
 }
