improve payment steps, improve responsive

--- a/frontend/assets/css/index.scss
+++ b/frontend/assets/css/index.scss
@@ -205,6 +205,11 @@ a {
     font-weight: bold !important;
 }
 
+// LoginForm
+.forgot-password-btn-mobile {
+    font-size: 13px !important;
+}
+
 // MyAccountDialog 
 .my-account-input input {
     margin-left: 10px;
